# funalyzer

./: .gitignore  README.md  __init__.py  plugin.json  pyproject.toml  requirements.txt  sidebar_widget.py
funalyzer/cli/: main.py
funalyzer/core/: LibMatchDatabase.py  db.py  input_data.py  lmd.py
funalyzer/views/: sidebar.py
